k3s/Open-WebUI/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: webui
spec:
  selector:
    app: open-webui
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
