k3s/Open-WebUI/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  namespace: webui
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.rule: PathPrefix(`/openwebui`)
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /openwebui
        pathType: Prefix
        backend:
          service:
            name: open-webui
            port:
              number: 8080
